--- a/site-personal/site-personal/estilos/paginaplano.css
+++ b/site-personal/site-personal/estilos/paginaplano.css
@@ -1,30 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap');
-
-/*
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-    font-variation-settings:
-        "slnt" 0;
-*/
-
-/*
-    //<uniquifier>: Use a unique and descriptive class name
-    // <weight>: Use a value from 400 to 800
-    
-    .rethink-sans-<uniquifier> {
-        font-family: "Rethink Sans", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: <weight>;
-        font-style: normal;
-    }
-*/
-
-/* MOBILE FIRST - até 800px(768px) */
-
 body {
     background-color: hsl(0, 0%, 8%);
     text-align: center;
@@ -34,7 +10,11 @@ body {
     font-weight: 500;
     font-style: normal;
     font-variation-settings: "slnt" 0;
-    margin: -80px 0px;
+    margin: -80px 20px;
+}
+
+.container {
+    height: 1400px;
 }
 
 img {
@@ -42,7 +22,6 @@ img {
     width: 80px;
     padding: 6px;
     margin-bottom: 15px;
-    /*box-shadow: 2px 2px 2px 2px white;*/
     border: 1px solid hsl(75, 94%, 57%);
 }
 
@@ -51,26 +30,15 @@ main {
     border-radius: 20px;
     padding: 25px;
     margin: 120px 20px;
-    /*margin-top: 40px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 50px;*/
 }
 
 h1 {
-    /*font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings: "slnt" 0;*/
-
     font-family: "Rethink Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: italic;
     font-size: 22px;
     padding: 10px;
-
 }
 
 h2 {
@@ -78,6 +46,13 @@ h2 {
     font-size: 16px;
     margin: -10px 0px;
     font-weight: 400;
+}
+
+h3 {
+    font-size: 20px;
+    padding-top: 10px;
+    color: rgb(233, 233, 5);
+    text-decoration: underline;
 }
 
 p {
@@ -91,49 +66,49 @@ p {
     padding-top: -10px;
 }
 
-/*div {          
-    width: 350px;
-    height: 320px;
-    //margin: 10px -8px;
-    width: 330px;
-    margin-bottom: 20px;
-    border-radius: 20px;
-}*/
-
 div {
-    background-image: url('../imagem/halter.jpg');
     width: 350px;
-    height: 320px;
+    height: 325px;
     border-radius: 20px;
-    margin: 10px auto;
+    margin: 25px auto;
 }
 
+div.teste1 {
+    background-image: url('../imagem/halter.jpg');
 
-div#a {
-    border: 1px solid ; /*OPÇÃO VERDE - hsl(75, 94%, 57%)*/
-    box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
 }
 
-div.teste > h3 {
-    font-size: 20px;
-    padding-top: 10px;
-    color: yellow;
-    text-decoration: underline;
+div.teste2 {
+    background-image: url('../imagem/halter.jpg');
     
 }
 
+div.teste3 {
+    background-image: url('../imagem/halter.jpg');
+    
+}
+
+div.teste4 {
+    background-image: url('../imagem/halter.jpg');
+    
+}
+
+div#a {
+    border: 1px solid; 
+    box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
+}
+
 div#b {
-    border: 1px solid;
+    border: 1px solid lightsalmon;
     box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
 }
 
 div#c {
-    border: 1px solid;
+    border: 1px solid lightslategray;
     box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
 }
 
 div#d {
-    border: 1px solid;
+    border: 1px solid lightgoldenrodyellow;
     box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
 }
-
