--- a/igor-reis-personal/estilos/paginaplano.css
+++ b/igor-reis-personal/estilos/paginaplano.css
@@ -60,8 +60,8 @@ p {
 }
 
 div {  
-    width: 350px;
-    height: 320px;
+    /*width: 350px;
+    height: 320px;*/
     border-radius: 20px;
     margin: 10px auto;
 }
