Atualização do arquivo final

--- a/igor-reis-personal/estilos/media-queryplano.css
+++ b/igor-reis-personal/estilos/media-queryplano.css
@@ -41,6 +41,8 @@
     }
     
     div {
-      display: inline-block;
+        display: inline-block;
+        width: 350px;
+        height: 320px;
     }    
 }
