--- a/igor-reis-personal/estilos/media-query.css
+++ b/igor-reis-personal/estilos/media-query.css
@@ -7,8 +7,11 @@
         margin-top: -40px;
     }
 
-    main {
+    /*main {
         margin-left: 400px;
         margin-right: 400px;
-    }
+        margin: auto;
+        padding: 50px 100px;
+
+    }*/
 }
