--- a/igor-reis-personal/estilos/paginaplano.css
+++ b/igor-reis-personal/estilos/paginaplano.css
@@ -60,8 +60,6 @@ p {
 }
 
 div {  
-    /*width: 350px;
-    height: 320px;*/
     border-radius: 20px;
     margin: 10px auto;
 }
@@ -79,24 +77,24 @@ div.teste > h3 {
 
 div#a {
     background-image: url('../imagem/halter.jpg');
-    border: 1px solid ;
+    border: 1px solid;
     box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
 }
 
 div#b {
     background-image: url('../imagem/halter.jpg');
-    border: 1px solid;
+    border: 1px solid lightcoral;
     box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
 }
 
 div#c {
     background-image: url('../imagem/halter.jpg');
-    border: 1px solid;
+    border: 1px solid lightgrey;
     box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
 }
 
 div#d {
     background-image: url('../imagem/halter.jpg');
-    border: 1px solid;
+    border: 1px solid rgba(182, 182, 54, 0.74);
     box-shadow: 2px 2px 5px 2px rgba(151, 137, 137, 0.301);
 }
