--- a/igor-reis-personal/estilos/style.css
+++ b/igor-reis-personal/estilos/style.css
@@ -22,10 +22,16 @@ main {
     margin: 120px 20px;
 }
 
-img {
+#logo {
     border-radius: 50%;
     width: 110px;
     padding: 6px;
+}
+
+#bprologo {
+    width: 150px;
+    height: 70px;
+    padding-top: 10px;
 }
 
 h1 {
@@ -35,7 +41,6 @@ h1 {
     font-style: normal;
     font-variation-settings: "slnt" 0;
     font-size: 30px;
-    
 }
 
 h2 {
@@ -46,7 +51,7 @@ h2 {
 }
 
 h3 {
-    font-size: 16px;
+    font-size: 23px;
     margin-bottom: 30px;
     margin-top: 40px;
     font-weight: 300;
@@ -56,8 +61,9 @@ h3 {
 p {
     font-size: 14px;
     margin-bottom: 30px;
-    margin-top: 40px;
+    margin-top: 10px;
     font-weight: 300;
+    
 }
 
 div {
